--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,9 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>2.22.0</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
